# mpv-subs-popout

./: Cargo.toml  PKGBUILD  README.md  build.rs  shell.nix
.github/workflows/: aur.yml  rust.yml
libs/mpvipc/: Cargo.toml  README.md
libs/mpvipc/src/: ipc.rs  lib.rs
resources/: mpv_subs_popout.gresources.xml  translator.ui
scripts/: launch-windows.rs
share/: mpv-subs-popout.desktop
src/: config.rs  context_menu.rs  main.rs  mpv.rs
src/app/: mod.rs  utils.rs
src/app/channel/: mod.rs
src/app/ctxmenu/: imp.rs  mod.rs
src/app/reference_dialog/: imp.rs  mod.rs
src/app/reference_dialog/translator/: imp.rs  mod.rs
src/app/window/: imp.rs  mod.rs
src/language/: mod.rs
src/language/translators/: deeplx.rs  meta.rs  mod.rs
src/language/translators/google/: google.rs  googleapiv1.rs  googleapiv2.rs  googlescrape.rs  googlev2.rs  mod.rs
