[package]
name = "mpv-subs-popout"
version = "0.1.0"
edition = "2021"
description = "Popout Mpv's Subs"
readme = "README.md"
repository = "https://github.com/sdaqo/mpv-subs-popout"
license = "GPL-3.0-only"
authors = ["sdaqo <sdaqo.dev@protonmail.com>"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mpvipc = "1.2.2"
gtk = "0.17.1"
serde = "1.0.166"
home-config = { version = "0.6.0", features = ["json"] }

