[package]
name = "mpv-subs-popout"
version = "0.1.0"
edition = "2021"
description = "Popout Mpv's Subs"
readme = "README.md"
repository = "https://github.com/sdaqo/mpv-subs-popout"
license = "GPL-3.0-only"
authors = ["sdaqo <sdaqo.dev@protonmail.com>"]

[package.metadata.deb]
maintainer = "sdaqo <sdaqo.dev@protonmail.com>"
license-file = ["LICENSE", 5]
extended-description = """\
A little application that makes it possible to display mpv's subs anywhere you want."""
assets = [
    ["target/release/mpv-subs-popout", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/mpv-subs-popout/", "644"],
    ["share/mpv-subs-popout.desktop", "usr/share/applications/", "755"],
    ["share/mpv-subs-popout.svg", "/usr/share/icons/hicolor/scalable/apps/", "644"],
    ["share/mpv-subs-popout.png", "/usr/share/icons/hicolor/64x64/apps/", "644"],
]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mpvipc = "1.2.2"
gtk = "0.17.1"
serde = "1.0.166"
home-config = { version = "0.6.0", features = ["json"] }

